- Score-P now requires OTF2 3.0 and CubeLib/W 4.7.
- The `SCOREP_ENABLE_SYSTEM_TREE_SEQUENCE_DEFINITIONS` feature is now
  also disabled when recording accelerator applications.
- Add proper support for NVIDIA HPC SDK compilers to build system
  via `--with-nocross-compiler-suite=nvhpc`.
- Add proper support for Intel oneAPI compilers to build system
  via `--with-nocross-compiler-suite=oneapi`.
- Add events for communicator creation and destruction to Score-P
  corresponding to the new records in OTF2 3.0.
- Add Fortran TYPE(C_PTR) overload wrappers to the MPI adapter for
  - `MPI_Alloc_mem`
  - `MPI_Win_allocate`
  - `MPI_Win_allocate_shared`
  - `MPI_Win_shared_query`
- With NVHPC compilers from version 21.1 on, Score-P now automatically
  ignores OpenMP outlined functions that caused measurement aborts
  when not manually filtered.
- Score-P now matches kernel launch sites to their execution instances
  during measurement by providing a numeric parameter, useful for
  distinguishing kernel instances when the same kernel is launched from
  different callpaths.
  This feature currently supports CUDA based kernels and is controlled via
  the `kernel_callsite` option to `SCOREP_CUDA_ENABLE`.
- Detect BeeGFS and WEKA as distributed filesystems.
- Score-P now generates ENTER and EXIT events for MPI procedures added in version
  4.0 of the MPI Standard.
  In particular, the following wrappers for procedures listed in section
  B.1.2 were added:
  - Item 6: `MPI_Isendrecv`, `MPI_Isendrecv_replace`
  - Item 7: persistent collectives and persistent neighborhood collectives
  - Item 9: partitioned communication
  - Item 13: `MPI_Comm_idup_with_info`
  - Item 22: `MPI_Info_get_string`
  - Item 24: Sessions model
  - Item 25: `MPI_Info_create_env`

User tools and API improvements and changes:

- Support for the online access interface was removed.
- Support for NEC and Sun compilers was removed.
- Improvement of `SCOREP_CUDA_ENABLE` options to include implicit