@@ -43,6 +43,7 @@ EXTRA_DIST += $(srcdir)/build-config/common/process_arguments.awk \
               $(srcdir)/build-config/common/platforms/compiler-frontend-nvhpc  \
               $(srcdir)/build-config/common/platforms/compiler-frontend-clang \
               $(srcdir)/build-config/common/platforms/compiler-frontend-aocc \
+              $(srcdir)/build-config/common/platforms/compiler-frontend-amdclang \
               $(srcdir)/build-config/common/platforms/compiler-mpi-bullxmpi \
               $(srcdir)/build-config/common/platforms/compiler-mpi-hp \
               $(srcdir)/build-config/common/platforms/compiler-mpi-ibmpoe \
@@ -79,6 +80,7 @@ EXTRA_DIST += $(srcdir)/build-config/common/process_arguments.awk \
               $(srcdir)/build-config/common/platforms/compiler-nocross-nvhpc  \
               $(srcdir)/build-config/common/platforms/compiler-nocross-clang  \
               $(srcdir)/build-config/common/platforms/compiler-nocross-aocc  \
+              $(srcdir)/build-config/common/platforms/compiler-nocross-amdclang  \
               $(srcdir)/build-config/common/platforms/platform-backend-altix  \
               $(srcdir)/build-config/common/platforms/platform-backend-bgl  \
               $(srcdir)/build-config/common/platforms/platform-backend-bgp  \
