@@ -1,0 +1,12 @@
+CC_FOR_BUILD=amdclang
+CXX_FOR_BUILD=amdclang++
+F77_FOR_BUILD=amdflang
+FC_FOR_BUILD=amdflang
+
+#CPPFLAGS_FOR_BUILD=
+CFLAGS_FOR_BUILD=-g -O2
+CXXFLAGS_FOR_BUILD=-g -O2
+FFLAGS_FOR_BUILD=-g -O2
+FCFLAGS_FOR_BUILD=-g -O2
+#LDFLAGS_FOR_BUILD=
+#LIBS_FOR_BUILD=
